[aliases]
# TODO: See if distclean can be made to remove dist/ as well.
distclean = rotate --keep=0 --match=.tar.gz,.whl clean
# After building, keep only the latest build.
build = sdist bdist_wheel rotate --keep=1 --match=.tar.gz,.whl

release = twineupload dist/*

[metadata]
name = boxgen
version = 1.0.3
author = Ellen Marie Dash
author_email = me@duckie.co
description = Generate box designs, to print on card stock and cut out.
long_description = file: README.md
url = https://github.com/duckinator/boxgen
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
install_requires =
    svgwrite>=1.1.12,<1.2
setup_requires =
    twine
    wheel
    distutils_twine~=2.0
python_requires = ~=3.6

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True

[entry_points]
console_scripts =
    boxgen = boxgen:main
