[aliases]
# Remove all source and wheel builds.
distclean = rotate --keep=0 --match=.tar.gz,.whl clean
# Make source and wheel builds, then remove all of them but the latest.
build = sdist bdist_wheel rotate --keep=1 --match=.tar.gz,.whl
# Running pytest includes flake8-* (see setup_requires) and pylint.
test = pytest

[metadata]
name = boxgen
version = 1.0.4
author = Ellen Marie Dash
author_email = me@duckie.co
description = Generate box designs, to print on card stock and cut out.
long_description = file: README.md
url = https://github.com/duckinator/boxgen
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
install_requires =
    svgwrite>=1.1.12,<1.2
    enforce
setup_requires =
    flake8~=3.5
    flake8-bugbear
    flake8-commas
    flake8-docstrings
    pytest-flake8
    pytest-runner
    twine
    wheel
    distutils_twine~=3.0
tests_require =
    pyenchant
    pytest
python_requires = ~=3.6

[tool:pytest]
addopts = --flake8 --verbose

[flake8]
select = C,E,F,W,B,B9
ignore = E221
max-complexity = 7
max-line-length = 80
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    venv

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True
